add VS code tasks

--- a/build-lib/RtoCodex/html/00Index.html
+++ b/build-lib/RtoCodex/html/00Index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head><title>R: Minimal From-Source Package for Codex</title>
+<head><title>R: Minimal From-Source Package for Codex env testing</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body><div class="container">
-<h1> Minimal From-Source Package for Codex
+<h1> Minimal From-Source Package for Codex env testing
 <img class="toplogo" src="../../../doc/html/Rlogo.svg" alt="[R logo]" />
 </h1>
 <hr/>
@@ -20,5 +20,8 @@
 <h2>Help Pages</h2>
 
 
-There are no help pages in this package
+<table style="width: 100%;">
+<tr><td style="width: 25%;"><a href="add1tester.html">add1tester</a></td>
+<td>Increment by one using compiled C</td></tr>
+</table>
 </div></body></html>
